--- a/asporto/index.html
+++ b/asporto/index.html
@@ -111,144 +111,158 @@
             </div>
         </div>
     </div>
-    <div class="tabs-content" id="menupage-text">
-        <section class="content active">
-            <div class="row">
-                <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+    <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
+    <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Per Stuzzicare</h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <li>
+                        <h3>Bocconcini di Pollo &emsp; 5</h3>
+                        <p>serviti con salsa piccante</p>
+                    </li>
+                    <li>
+                        <h3>Mozzarelle Fritte &emsp; 5,5</h3>
+                        <p>servite con salse del Beerstrot</p>
+                    </li>
+                    <li>
+                        <h3>Cipolla Fritta &emsp; 4,5</h3>
+                        <p>anelli di cipolla dorata impanati</p>
+                    </li>
+                    <li>
+                        <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                        <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
+                    </li>
+                    <li>
+                        <h3>Olive all'Ascolana &emsp; 5</h3>
+                        <p>il più tipico dei piatti marchigiani</p>
+                    </li>
+                    <li>
+                        <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
+                        <p>servite con salse del Beerstrot</p>
+                    </li>
+                    <li>
+                        <h3>Tacos Vegetariano &emsp; 5,5</h3>
+                        <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
+                    </li>
+                    <li>
+                        <h3>Tacos Chilli &emsp; 5,5</h3>
+                        <p>con carne e fagioli, insalata, salsa allo yogurt</p>
+                    </li>
+                    <li>
+                        <h3>Patate Fritte &emsp; 4</h3>
+                        <p>patate fritte con buccia</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Hamburger (180 grammi)<br><small>Servito con patate fritte. Cottura media.</small></h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <li>
+                        <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
+                        <p>manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                    </li>
+                    <li>
+                        <h3>New York &emsp; 8,9 / doppio 14,9</h3>
+                        <p>manzo, cheddar, cipolla caramellata, insalata</p>
+                    </li>
+                    <!-- <li>
+                        <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
+                        <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
+                    </li> -->
+                    <li>
+                        <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
+                        <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                    </li>
+                    <li>
+                        <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
+                        <p>manzo, scamorza affumicata, crema di porcini, speck croccante</p>
+                    </li>
+                    <li>
+                        <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
+                        <p>manzo, gorgonzola, crema di zucca, speck croccante</p>
+                    </li>
+                    <li>
+                        <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
+                        <p>manzo, gorgonzola, bacon, pomodorini confit</p>
+                    </li>
+                    <li>
+                        <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
+                        <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                    </li>
+                    <li>
+                        <h3>Vegetariano &emsp; 8,9</h3>
+                        <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
+                    </li>
+                    <li>
+                        <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
+                        <p>manzo, cheddar</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Carni <br></h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <li>
+                        <h3>Costine &emsp; 13,9</h3>
+                        <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
+                    </li>
+                    <li>
+                        <h3>Tagliata di Picanha &emsp; 19</h3>
+                        <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
+                    </li>
+                    <li>
+                        <h3>Cotoletta alla Milanese &emsp; 21</h3>
+                        <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
+                    </li>
+                    <li>
+                        <h3>T-Bone Steak &emsp; 4 per etto</h3>
+                        <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
+                <div class="title-divider">
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3>Bocconcini di Pollo &emsp; 5</h3>
-                            <p>serviti con salsa piccante</p>
+                            <h3>Blondie &emsp; 5</h3>
+                            <p>brownie servito con crema di mascarpone</p>
                         </li>
                         <li>
-                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
-                            <p>servite con salse del Beerstrot</p>
+                            <h3>Cheesecake &emsp; 5</h3>
+                            <p>stile new york</p>
                         </li>
                         <li>
-                            <h3>Cipolla Fritta &emsp; 4,5</h3>
-                            <p>anelli di cipolla dorata impanati</p>
+                            <h3>Birramisù &emsp; 5</h3>
+                            <p>tiramisù alla birra stout</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
-                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
+                            <h3>Crumble &emsp; 5</h3>
+                            <p>con crema pasticcera e scaglie di cioccolato</p>
                         </li>
                         <li>
-                            <h3>Olive all'Ascolana &emsp; 5</h3>
-                            <p>il più tipico dei piatti marchigiani</p>
-                        </li>
-                        <li>
-                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
-                            <p>servite con salse del Beerstrot</p>
-                        </li>
-                        <li>
-                            <h3>Tacos Vegetariano &emsp; 5,5</h3>
-                            <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
-                        </li>
-                        <li>
-                            <h3>Tacos Chilli &emsp; 5,5</h3>
-                            <p>con carne e fagioli, insalata, salsa allo yogurt</p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte &emsp; 4</h3>
-                            <p>patate fritte con buccia</p>
+                            <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
+                            <p>cantucci e anicetti artigianali serviti con vino di visciole</p>
                         </li>
                     </ul>
+                    <blockquote>
+                        <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.</p>
+                    </blockquote>
+                    <br>
+                </div>
+                <div class="title-divider">
+                    <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
+                    <br>
                 </div>
             </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger (180 grammi)<br><small>Servito con patate fritte. Cottura media.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
-                        </li>
-                        <li>
-                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>
-                            <p>manzo, cheddar, cipolla caramellata, insalata</p>
-                        </li>
-                        <!-- <li>
-                            <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
-                        </li> -->
-                        <li>
-                            <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, scamorza affumicata, crema di porcini, speck croccante</p>
-                        </li>
-                        <li>
-                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
-                            <p>manzo, gorgonzola, crema di zucca, speck croccante</p>
-                        </li>
-                        <li>
-                            <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, gorgonzola, bacon, pomodorini confit</p>
-                        </li>
-                        <li>
-                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
-                            <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
-                        </li>
-                        <li>
-                            <h3>Vegetariano &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
-                        </li>
-                        <li>
-                            <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
-                            <p>manzo, cheddar</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Carni <br></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Costine &emsp; 13,9</h3>
-                            <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
-                        </li>
-                        <li>
-                            <h3>Tagliata di Picanha &emsp; 19</h3>
-                            <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
-                        </li>
-                        <li>
-                            <h3>Cotoletta alla Milanese &emsp; 21</h3>
-                            <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
-                        </li>
-                        <li>
-                            <h3>T-Bone Steak &emsp; 4 per etto</h3>
-                            <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
-                    <div class="title-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Blondie &emsp; 5</h3>
-                                <p>brownie servito con crema di mascarpone</p>
-                            </li>
-                            <li>
-                                <h3>Cheesecake &emsp; 5</h3>
-                                <p>stile new york</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="title-divider">
-                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
-                        <br>
-                    </div>
-                </div>
-            </div>
-        </section>
+        </div>
+    </section>
 <!-- call to action inizio -->
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
