--- a/asporto/index.html
+++ b/asporto/index.html
@@ -102,7 +102,10 @@
         </div>
         <div class="row show-for-small">
             <div class="medium-12 large-12 columns">
-                <br><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a>
+                <br>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
             </div>
         </div>
         <div class="row">
@@ -111,167 +114,157 @@
             </div>
         </div>
     </div>
-    <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
-    <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Per Stuzzicare</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                    <li>
-                        <h3>Bocconcini di Pollo &emsp; 5</h3>
-                        <p>serviti con salsa piccante</p>
-                    </li>
-                    <li>
-                        <h3>Mozzarelle Fritte &emsp; 5,5</h3>
-                        <p>servite con salse del Beerstrot</p>
-                    </li>
-                    <li>
-                        <h3>Cipolla Fritta &emsp; 4,5</h3>
-                        <p>anelli di cipolla dorata impanati</p>
-                    </li>
-                    <li>
-                        <h3>Peperoncini Piccanti &emsp; 4,5</h3>
-                        <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
-                    </li>
-                    <li>
-                        <h3>Olive all'Ascolana &emsp; 5</h3>
-                        <p>il più tipico dei piatti marchigiani</p>
-                    </li>
-                    <li>
-                        <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
-                        <p>servite con salse del Beerstrot</p>
-                    </li>
-                    <li>
-                        <h3>Tacos Vegetariano &emsp; 5,5</h3>
-                        <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
-                    </li>
-                    <li>
-                        <h3>Tacos Chilli &emsp; 5,5</h3>
-                        <p>con carne e fagioli, insalata, salsa allo yogurt</p>
-                    </li>
-                    <li>
-                        <h3>Patate Fritte &emsp; 4</h3>
-                        <p>patate fritte con buccia</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Hamburger (180 grammi)<br><small>Servito con patate fritte. Cottura media.</small></h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                    <li>
-                        <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
-                        <p>manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
-                    </li>
-                    <li>
-                        <h3>New York &emsp; 8,9 / doppio 14,9</h3>
-                        <p>manzo, cheddar, cipolla caramellata, insalata</p>
-                    </li>
-                    <!-- <li>
-                        <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
-                        <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
-                    </li> -->
-                    <li>
-                        <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
-                        <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
-                    </li>
-                    <li>
-                        <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
-                        <p>manzo, scamorza affumicata, crema di porcini, speck croccante</p>
-                    </li>
-                    <li>
-                        <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
-                        <p>manzo, gorgonzola, crema di zucca, speck croccante</p>
-                    </li>
-                    <li>
-                        <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
-                        <p>manzo, gorgonzola, bacon, pomodorini confit</p>
-                    </li>
-                    <li>
-                        <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
-                        <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
-                    </li>
-                    <li>
-                        <h3>Vegetariano &emsp; 8,9</h3>
-                        <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
-                    </li>
-                    <li>
-                        <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
-                        <p>manzo, cheddar</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Carni <br></h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                    <li>
-                        <h3>Costine &emsp; 13,9</h3>
-                        <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
-                    </li>
-                    <li>
-                        <h3>Tagliata di Picanha &emsp; 19</h3>
-                        <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
-                    </li>
-                    <li>
-                        <h3>Cotoletta alla Milanese &emsp; 21</h3>
-                        <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
-                    </li>
-                    <li>
-                        <h3>T-Bone Steak &emsp; 4 per etto</h3>
-                        <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
-                <div class="title-divider">
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+    <div class="tabs-content" id="menupage-text">
+<!-- cena -->
+        <section>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Per Stuzzicare</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Blondie &emsp; 5</h3>
-                            <p>brownie servito con crema di mascarpone</p>
+                            <h3>Bocconcini di Pollo &emsp; 5</h3>
+                            <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Cheesecake &emsp; 5</h3>
-                            <p>stile new york</p>
+                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
+                            <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
-                            <h3>Birramisù &emsp; 5</h3>
-                            <p>tiramisù alla birra stout</p>
+                            <h3>Cipolla Fritta &emsp; 4,5</h3>
+                            <p>anelli di cipolla dorata impanati</p>
                         </li>
                         <li>
-                            <h3>Crumble &emsp; 5</h3>
-                            <p>con crema pasticcera e scaglie di cioccolato</p>
+                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
-                            <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
-                            <p>cantucci e anicetti artigianali serviti con vino di visciole</p>
+                            <h3>Olive all'Ascolana &emsp; 5</h3>
+                            <p>il più tipico dei piatti marchigiani</p>
+                        </li>
+                        <li>
+                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
+                            <p>servite con salse del Beerstrot</p>
+                        </li>
+                        <li>
+                            <h3>Tacos Vegetariano &emsp; 5,5</h3>
+                            <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
+                        </li>
+                        <li>
+                            <h3>Tacos Chilli &emsp; 5,5</h3>
+                            <p>con carne e fagioli, insalata, salsa allo yogurt</p>
+                        </li>
+                        <li>
+                            <h3>Patate Fritte &emsp; 4</h3>
+                            <p>patate fritte con buccia</p>
                         </li>
                     </ul>
-                    <blockquote>
-                        <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.</p>
-                    </blockquote>
-                    <br>
-                </div>
-                <div class="title-divider">
-                    <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
-                    <br>
                 </div>
             </div>
-        </div>
-    </section>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Hamburger (180 grammi)<br><small>Servito con patate fritte. Cottura media.</small></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, cheddar, cipolla caramellata, insalata</p>
+                        </li>
+                        <!-- <li>
+                            <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
+                            <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
+                        </li> -->
+                        <li>
+                            <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, scamorza affumicata, crema di porcini, speck croccante</p>
+                        </li>
+                        <li>
+                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, gorgonzola, crema di zucca, speck croccante</p>
+                        </li>
+                        <li>
+                            <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, gorgonzola, bacon, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
+                            <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                        </li>
+                        <li>
+                            <h3>Vegetariano &emsp; 8,9</h3>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
+                        </li>
+                        <li>
+                            <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
+                            <p>manzo, cheddar</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Carni <br></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Costine &emsp; 13,9</h3>
+                            <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
+                        </li>
+                        <li>
+                            <h3>Tagliata di Picanha &emsp; 19</h3>
+                            <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
+                        </li>
+                        <li>
+                            <h3>Cotoletta alla Milanese &emsp; 21</h3>
+                            <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
+                        </li>
+                        <li>
+                            <h3>T-Bone Steak &emsp; 4 per etto</h3>
+                            <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
+                    <div class="title-divider">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Blondie &emsp; 5</h3>
+                                <p>brownie servito con crema di mascarpone</p>
+                            </li>
+                            <li>
+                                <h3>Cheesecake &emsp; 5</h3>
+                                <p>stile new york</p>
+                            </li>
+                        </ul>
+                        <br>
+                    </div>
+                    <div class="title-divider">
+                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
+                        <br>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- cena fine -->
 <!-- call to action inizio -->
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
             </div>
         </div>
 <!-- call to action fine -->
     </div>
+<!-- tab fine -->
 <!-- inizio footer -->
     <footer class="panel-prefooter">
         <div class="row">
@@ -348,7 +341,7 @@
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
                 <ul class="block-grid-cards-3">
-                    <li>
+                                        <li>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 106.2" style="max-width: 80px"  enable-background="new 0 0 170 106.2"><g><path class="img-cards" fill="#3A58A8" d="M169.9 100.5c0 3.1-2.6 5.7-5.7 5.7H5.7c-3.1 0-5.7-2.6-5.7-5.7V5.7C0 2.6 2.6 0 5.7 0h158.6c3.1 0 5.7 2.6 5.7 5.7v94.8h-.1z"/><g fill="#fff"><path d="M78.2 69.1h-8.3l5.2-32h8.3zM62.9 37.1l-7.9 22-.9-4.7L51.2 40s-.3-2.8-3.9-2.8H34.2l-.2.5s4.1.8 8.7 3.7L50 69.1h8.7l13.1-32h-8.9zM128.2 69.1h7.6l-6.6-31.8h-6.6c-3.1 0-3.8 2.4-3.8 2.4l-12.3 29.4h8.7l1.8-4.7h10.6l.6 4.7zm-9.1-11.4l4.3-11.9 2.4 11.9h-6.7zM106.9 44.8l1.2-6.9s-3.7-1.3-7.5-1.3c-4.1 0-14 1.8-14 10.6 0 8.3 11.5 8.4 11.5 12.6 0 4.3-10.3 3.5-13.7.8l-1.2 7.2s3.7 1.8 9.3 1.8c5.7 0 14.2-3 14.2-11 0-8.3-11.6-9.1-11.6-12.6.3-3.6 8.3-3.1 11.8-1.2z"/></g><path fill="#FAA634" d="M54 54.3L51.2 40s-.3-2.8-3.9-2.8H34.1l-.1.5s6.2 1.3 12.3 6.2c5.9 4.6 7.7 10.4 7.7 10.4z"/></g></svg>
                     </li>
                     <li>
