--- a/menu/index.html
+++ b/menu/index.html
@@ -47,7 +47,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h2><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
+                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -56,11 +56,9 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://www.beerstrot.it/menu/">Menù</a></li>
+                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
