--- a/asporto/index.html
+++ b/asporto/index.html
@@ -72,7 +72,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Ogni 1€ di spesa accumuli 1 punto.<br>QUando raggiungi 100 punti ottieni 20€ di sconto.</h1>
+                <h1 class="text-highlight" itemprop="description">Ogni 1€ di spesa accumuli 1 punto.<br>Quando raggiungi 100 punti ottieni 20€ di sconto.</h1>
             </div>
         </div>
         <div class="row">
