--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2018"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/beerstrot-birreria.html"/>
     <meta property="og:type" content="article"/>
@@ -22,6 +22,7 @@
     <link rel="canonical" href="http://www.beerstrot.it/eventi/beerstrot-birreria.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
