--- a/contatti/index.html
+++ b/contatti/index.html
@@ -8,12 +8,13 @@
     <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Birre artigianali e Hamburger strepitosi in un locale bellissimo. Pub, Birreria o Birstrot? Decidi tu."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2018"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/contatti/"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
