--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2018"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Beerfest: due giorni di birra e concerti"/>
@@ -25,6 +25,7 @@
     <link rel="canonical" href="http://www.beerstrot.it/eventi/beerfest.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
