--- a/eventi/cena-san-martino.html
+++ b/eventi/cena-san-martino.html
@@ -8,7 +8,7 @@
     <meta name="description" content="11 Novembre 2016 dalle ore 20:30. Cena di San Martino con menù a base di castagne, funghi e baccalà"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2018"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Cena di San Martino"/>
@@ -28,6 +28,7 @@
     <link rel="canonical" href="http://www.beerstrot.it/eventi/cena-san-martino.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
