--- a/eventi/festa-estate-concerto-live.html
+++ b/eventi/festa-estate-concerto-live.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2018"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="L'estate festeggiamola con i Flora e Fauna"/>
@@ -25,6 +25,7 @@
     <link rel="canonical" href="http://www.beerstrot.it/eventi/festa-estate-concerto-live.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
