--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Costine di maiale con lunga cottura a bassa temperatura. Finite alla griglia con una spennellata di salsa BBQ. Succose e con un retrogusto leggermente dolce"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2018"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Costine in Salsa BBQ"/>
@@ -25,6 +25,7 @@
     <link rel="canonical" href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
