--- a/menu/index.html
+++ b/menu/index.html
@@ -112,14 +112,6 @@
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
-                            <p>servite con salse del Beerstrot</p>
-                        </li>
-                        <li>
-                            <h3>Cipolla Fritta &emsp; 4,5</h3>
-                            <p>anelli di cipolla dorata impanati</p>
-                        </li>
-                        <li>
                             <h3>Peperoncini Piccanti &emsp; 4,5</h3>
                             <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
@@ -128,16 +120,24 @@
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
-                            <p>servite con salse del Beerstrot</p>
+                            <h3>Tacos Chilli &emsp; 5,5</h3>
+                            <p>con carne e fagioli, insalata, salsa allo yogurt</p>
                         </li>
                         <li>
                             <h3>Tacos Vegetariano &emsp; 5,5</h3>
                             <p>con dadolata di zucca e ceci, insalata, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>Tacos Chilli &emsp; 5,5</h3>
-                            <p>con carne e fagioli, insalata, salsa allo yogurt</p>
+                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
+                            <p>servite con salse del Beerstrot</p>
+                        </li>
+                        <li>
+                            <h3>Cipolla Fritta &emsp; 4,5</h3>
+                            <p>anelli di cipolla dorata impanati</p>
+                        </li>
+                        <li>
+                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
+                            <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>
@@ -152,31 +152,27 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                            <p>manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
                             <h3>New York &emsp; 8,9 / doppio 14,9</h3>
                             <p>manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
-                        <!-- <li>
-                            <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
-                            <p>180 grammi di manzo, uovo all’occhio di bue, fontina, bacon, insalata</p>
-                        </li> -->
                         <li>
                             <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                            <p>manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, scamorza affumicata, crema di porcini, speck croccante</p>
+                            <h3>Inverno &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, scamorza affumicata, speck croccante, radicchio spadellato</p>
                         </li>
                         <li>
-                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
-                            <p>manzo, gorgonzola, crema di zucca, speck croccante</p>
+                            <h3>Cacio e Pepe &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, pecorino vallesina, guanciale, pepe</p>
                         </li>
                         <li>
-                            <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, gorgonzola, bacon, pomodorini confit</p>
+                            <h3>Bismarck &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, uovo all’occhio di bue, fontina, bacon croccante, insalata</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
@@ -207,7 +203,7 @@
                         </li>
                         <li>
                             <h3>Cotoletta alla Milanese &emsp; 21</h3>
-                            <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
+                            <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>
@@ -222,24 +218,24 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Blondie &emsp; 5</h3>
-                                <p>brownie servito con crema di mascarpone</p>
-                            </li>
-                            <li>
-                                <h3>Cheesecake &emsp; 5</h3>
-                                <p>stile new york</p>
+                                <h3>Cioccolatosa &emsp; 5</h3>
+                                <p>doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
                             </li>
                             <li>
                                 <h3>Birramisù &emsp; 5</h3>
                                 <p>tiramisù alla birra stout</p>
                             </li>
                             <li>
-                                <h3>Crumble &emsp; 5</h3>
-                                <p>con crema pasticcera e scaglie di cioccolato</p>
+                                <h3>Cheesecake &emsp; 5</h3>
+                                <p>stile new york</p>
+                            </li>
+                            <li>
+                                <h3>Dolceburger &emsp; 6</h3>
+                                <p>pan brioche ripieno di crema al caffè e cioccolato croccante, servito con delicato zabaione</p>
                             </li>
                             <li>
                                 <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
-                                <p>cantucci e anicetti artigianali serviti con vino di visciole</p>
+                                <p>cantucci e anicetti artigianali, serviti con vino di visciole</p>
                             </li>
                         </ul>
                         <blockquote>
