change tag line

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama la birra artigianale<br>e il buon cibo</h1>
+                <h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama gli hamburger gourmet<br>e la birra artigianale</h1>
             </div>
         </div>
         <div class="row">
@@ -115,9 +115,10 @@
                 <a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni di prima scelta e verdure fresche di stagione.</p>
-                <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
-                <a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
+                <p>Siamo specializzati in Hamburger Gourmet e Birra Artigianale, ma quella buona.</p>
+                <p>Gli Hamburger di nostra produzione contengono solo carne di vacca marchigiana di prima scelta, sale e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure e prodotti di stagione.</p>
+                <p>Per le Birre Artigianali, utilizziamo prevalentemente birrifici marchigiani di comprovata qualità.</p>
+                <a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
             </div>
         </div>
     </div>
