--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Siamo specializzati in Hamburger Gourmet e Birra Artigianale, ma quella buona.</p>
                 <p>Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta, sale e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure e prodotti di stagione.</p>
-                <p>Per le Birre Artigianali, utilizziamo prevalentemente birrifici marchigiani di comprovata qualità.</p>
+                <p>Per le Birre Artigianali, collaboriamo sopratutto con birrifici marchigiani di comprovata qualità.</p>
                 <a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
             </div>
         </div>
@@ -133,7 +133,7 @@
                 <a role="button" href="http://www.beerstrot.it/asporto/"><img src="http://www.beerstrot.it/asset/img/medium/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
-                <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti?</p>
+                <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa sotto i denti?</p>
                 <p>Abbiamo un menù anche per questo.</p>
                 <a role="button" href="http://www.beerstrot.it/asporto/">Scopri il Menù Asporto &rarr;</a>
             </div>
