home page text rewrite

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                 <a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Siamo specializzati in Hamburger Gourmet e Birra Artigianale, ma quella buona.</p>
+                <p>Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona.</p>
                 <p>Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta, sale e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure e prodotti di stagione.</p>
-                <p>Per le Birre Artigianali, collaboriamo sopratutto con birrifici marchigiani di comprovata qualità.</p>
+                <p>Per le Birre Artigianali, collaboriamo con piccoli birrifici marchigiani di comprovata qualità.</p>
                 <a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
             </div>
         </div>
