--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
-    <meta name="description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <title>Beerstrot | Specialisti in Hamburger Gourmet</title>
+    <meta name="description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Beerstrot Copyright (c) 2017"/>
+    <meta name="copyright" content="Beerstrot Copyright (c) 2019"/>
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Birra Artigianale e Cibo Divino"/>
-    <meta name="twitter:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <meta name="twitter:title" content="Specialisti in Hamburger Gourmet"/>
+    <meta name="twitter:description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona"/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Birra Artigianale e Cibo Divino"/>
-    <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <meta property="og:title" content="Specialisti in Hamburger Gourmet"/>
+    <meta property="og:description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona."/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it"/>
