--- a/contatti/index.html
+++ b/contatti/index.html
@@ -5,11 +5,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Contatti</title>
-    <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Birre artigianali e Hamburger strepitosi in un locale bellissimo. Pub, Birreria o Birstrot? Decidi tu."/>
+    <meta name="description" content="Una filosofia semplice: siamo specialisti in Hamburger Gourmet e Birre artigianali, ma quelle buone, in un locale bellissimo"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2019"/>
     <meta property="fb:app_id" content="1549149915357715"/>
+    <meta property="og:url" content="http://www.beerstrot.it/contatti/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Specialisti in Hamburger Gourmet"/>
+    <meta property="og:description" content="Una filosofia semplice: siamo specialisti in Hamburger Gourmet e Birre artigianali, ma quelle buone, in un locale bellissimo"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/contatti/"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
