--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="http://www.beerstrot.it"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Specialisti in Hamburger Gourmet"/>
-    <meta property="og:description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona."/>
+    <meta property="og:description" content="Siamo specialisti in Hamburger Gourmet e Birra Artigianale, ma quella buona"/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it"/>
