add consegne a domicilio

--- a/asporto/index.html
+++ b/asporto/index.html
@@ -73,7 +73,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Ogni 1€ di spesa accumuli 1 punto.<br>Quando raggiungi 100 punti ottieni 20€ di sconto.</h1>
+                <h1 class="text-highlight" itemprop="description">Ora consegnamo direttamente a casa tua. <br>Ca' Vecchia Beerstrot ti è sempre più vicino.</h1>
             </div>
         </div>
         <div class="row">
@@ -86,19 +86,19 @@
     <div class="panel-asporto">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporto</h1>
+                <h1>Asporto / Consegna a Domicilio</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>20:00</strong></h4>
+                <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Promozione Asporto:</strong><br>
-                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Quando raggiungi <strong>100 punti</strong> ottieni <strong>20€ di sconto</strong> sugli asporti successivi.</h4>
+                <h4><strong>Consegna a domicilio:</strong> gli hamburger a casa tua a soli 1,5€ per la consegna, gratis per ordini superiori ai 40€.</h4>
             </div>
         </div>
         <div class="row show-for-small">
